# gromit-mpx

./: .gitignore  .gromitrc  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  NEWS  NEWS.md  README  README.MPX  README.md  TODO  autogen.sh  build-config.h_cmake_in  configure.ac  erase_cursor.xpm  gromit-mpx.1  gromit-mpx.c  gromit.c  gromit.c_devhotkeytry3  paint_cursor.xpm
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
architecture/: gfx_store.md
data/: gromit-mpx.cfg  gromit-mpx.desktop  gromit-mpx.xpm  net.christianbeier.Gromit-MPX.appdata.xml  net.christianbeier.Gromit-MPX.desktop
debian/: changelog  control  copyright  dirs  gromit-mpx.1  manpages  menu  rules
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-implement-graphics-object-store.md
flatpak/: README.md  net.christianbeier.Gromit-MPX.yml
gtk_patch/: README  gtk_gdk_xinput2_devices.patch
po/: README.md  de.po  es.po  fa.po  he.po  it.po  ka.po  mkpot.sh  pt_BR.po  zh_CN.po  zh_HK.po  zh_SG.po  zh_TW.po
src/: Makefile.am  callbacks.c  callbacks.h  config.c  config.h  coordlist_ops.c  coordlist_ops.h  drawing.c  drawing.h  erase_cursor.xbm  erase_cursor.xpm  erase_cursor_mask.xbm  gromit-mpx.c  gromit-mpx.h  init.c  init.h  input.c  input.h  main.c  main.h  paint_cursor.xbm  paint_cursor.xpm  paint_cursor_mask.xbm  parser.c  parser.h  smooth.c  smooth.h  smooth_priv.h
test/: .gitignore  README.md  send_input.c  test-tool-multi-user.sh
